
syntax = "proto3";

option csharp_namespace = "bbnApp.Protos";

package OperatorGrpc;


/********定义操作员权限对象服务********/
service OperatorGrpc {
    //操作员树查询
    rpc OperatorListLoad (OperatorListRequest) returns (OperatorListResponse);
	//操作员信息提交
    rpc OperatorSave (OperatorSaveRequest) returns (OperatorSaveResponse);
    //操作员状态变更
    rpc OperatorState (OperatorStateRequest) returns (OperatorStateResponse);
}

// 操作员对象
message OperatorItem {
    int32 IdxNum = 1; // 序号
    string Yhid = 2; // 用户组ID
    string EmployeeId = 3; // 员工ID
    string PEmployeeId = 4; // 上级管理ID
    string EmployeeName = 5; // 员工姓名
    string EmployeeNum = 6; // 员工工号
    string DepartMentId = 7; // 所在部门ID
    string Position = 8; // 职务等级ID
    int32 PositionLeve = 9; // 职务等级
    bool IsOperator = 10; // 已分配权限
    string OperatorId = 11; // 操作员ID
    string PassWord = 12; // 密码
    string PassWordExpTime = 13; // 密码过期时间
    int32 IsLock = 14; // 停用状态
    string CompanyId = 15; // 机构ID
    repeated OperatorRole OperatorRoles = 16; // 操作员角色
}

// 操作员角色
message OperatorRole {
    int32 IdxNum = 1; // 序号
    string RoleId = 2; // 角色ID
    string RoleName = 3; // 角色名称
    int32 RoleLeve = 4; // 角色等级
    string RoleLeveName = 5; // 角色等级名称
    string RoleDescription = 6; // 角色说明
    bool IsChecked = 7; // 勾选状态
    string OperatorId=8; // 操作员ID
    string CompanyId=9; // 机构ID
    bool IsEnabled=10;//可选中
}

// 操作员树查询请求对象
message OperatorListRequest {
    string CompanyId = 1; // 机构ID
    string DepartMentId = 2; // 部门ID
    string EmployeeName = 3; // 员工姓名
    string EmployeeNum = 4; // 员工工号
}

// 操作员树响应对象
message OperatorListResponse {
    bool Code = 1; // 状态码
    string Message = 2; // 消息内容
    repeated OperatorItem Items = 3; // 员工列表
}

// 操作员信息请求对象
message OperatorInfoRequest {
    string EmployeeId = 1; // 员工ID
    string CompanyId = 2; // 公司ID
    string OperatorId = 3; // 操作员ID
}

// 操作员信息响应对象
message OperatorInfoResponse {
    bool Code = 1; // 状态码
    string Message = 2; // 消息内容
    OperatorItem Item = 3; // 员工列表
}

// 操作员保存请求对象
message OperatorSaveRequest {
    OperatorItem Item = 1; // 操作员对象
}

// 操作员保存响应对象
message OperatorSaveResponse {
    bool Code = 1; // 状态码
    string Message = 2; // 消息内容
    OperatorItem Item = 3; // 员工列表
}

// 操作员状态请求对象
message OperatorStateRequest {
    string Type = 1; // 操作类型
    string OperatorId = 2; // 操作员ID
    string Reason = 3; // 原因
}

// 操作员状态响应对象
message OperatorStateResponse {
    bool Code = 1; // 状态码
    string Message = 2; // 消息内容
    OperatorItem Item = 3; // 操作员对象
}
